styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-center {
  align-items: center;
  justify-content: center;
}

.flex-wrap {
  flex-wrap: wrap;
}

.text-center {
  text-align: center;
}

body {
  min-height: 100vh;

  --standard-gap: 1.25rem;
  gap: var(--standard-gap);
}

.game-board {
  --board-preferred-width: 400px;

  max-width: var(--board-preferred-width);
}

.cell {
  --cell-preferred-dimension: calc(var(--board-preferred-width) / 3);
  height: var(--cell-preferred-dimension);
  width: var(--cell-preferred-dimension);

  flex: 30%;

  --cell-border: 1px solid #000000;
  border-right: var(--cell-border);
  border-bottom: var(--cell-border);
}

.cell:nth-child(3n) {
  border-right: none;
}

.cell:nth-child(7),
.cell:nth-child(8),
.cell:nth-child(9) {
  border-bottom: none;
}

.player-names {
  width: 100%;

  justify-content: center;
  gap: var(--standard-gap);
}

.player-name {
  --preferred-width: 200px;

  text-align: center;
  
  flex-basis: var(--preferred-width);
  min-width: min(var(--preferred-width), 100%);
}

.player-name-input {
  border: none;

  font-family: inherit;
  font-size: 1rem;
}

.game-feedback {
  width: max-content;
}

